syntax = "proto3";

package user;

import "google/protobuf/field_mask.proto";

option go_package="./;user";

// Generated according to https://cloud.google.com/apis/design/standard_methods
service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (User) {}
  rpc DeleteUser(DeleteUserRequest) returns (User) {}
}

message Profile {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
}

message Personal {
  string email = 1;
}

message User {
  string id = 1;
  Profile profile = 2;
  Personal personal = 3;
}

message ListUsersRequest {
  optional string cursor = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_cursor = 2;
  string prev_cursor = 3;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message UpdateUserProfileRequest {
  string id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;

  google.protobuf.FieldMask field_mask = 5;
}

message DeleteUserRequest {
  // The resource name of the user to be deleted.
  string id = 1;
}
